--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
   top: -75px;
   right: 0px;
   height: 50px;
-    transition: opacity 0.3s
+  transition: opacity 0.3s
 }
 .arrow_up img:hover{
   opacity: 0.65;
@@ -148,6 +148,10 @@ label, input, textarea{
   color: #fbefe1;
   background-color: #54310c;
 }
+.social{
+  padding-left: 15%;
+  padding-right: 15%;
+}
 .contact .social img{
   height: 100px;
   display: flex;
@@ -168,10 +172,18 @@ label, input, textarea{
   input, textarea, .contact form button{
     width: 80vw;
   }
+  .social{
+    padding-left: 30%;
+    padding-right: 30%;
+  }
 }
 @media only screen and (max-width:490px){
   input, textarea, .contact form button{
     width: 70vw;
+  }
+  .social{
+    padding-left: 20%;
+    padding-right: 20%;
   }
 }
 /*********************************************/
