--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ body{
 .navbar-default{
   background-color: #fbefe1;
   border-color: #fbefe1;
+  border-bottom: 0;
 }
 .nav.navbar-nav.navbar-right li a{
   color: #935e1b;
@@ -71,7 +72,7 @@ body{
    content: '';
    display: block;
    background-color: #935e1b;
-   height: 2px;
+   height: 3px;
    width: 0px;
    transition: width 0.3s;
 }
@@ -112,36 +113,209 @@ body{
   nav .navbar-brand img{
     margin-left: 50px;
   }
+  .nav.navbar-nav.navbar-right li::after{
+    height: 4px;
+  }
 }
 /*********************************************/
+
 /*CAROUSEL-->*/
 header{
   margin: -20px;
 }
-
+.carousel .item{
+  max-height: 70vh;
+  width: 100%;
+}
+.item .img{
+  width: 100%;
+}
+@media only screen and (max-width: 767px){
+  .carousel .item{
+    max-height: 45vh;
+  }
+}
+.glyphicon-chevron-left, .glyphicon-chevron-right{
+  color: #54310c;
+}
+.carousel-indicators li{
+  background-color: #fbefe1;
+  border: none;
+  transition: background-color 0.3s;
+}
+.carousel-indicators li:hover{
+  background-color: #bfa484;
+}
+.carousel-indicators .active{
+  background-color: #935e1b;
+  opacity: 0.9;
+}
+.carousel-indicators .active:hover{
+  background-color: #935e1b;
+}
 /*****************************************/
 
-
-
-
 /*SEKCIJA!-->*/
-
 #sekcija1{
  display:grid;
  grid-template-columns: auto auto auto;
  margin: 20px;
-
 }
 .klasa2{
   border-radius: 15px;
   border-style: solid;
-  box-shadow: 0px 10px 10px 0px #935e1b;
+  border-width: 2px;
+  box-shadow: 0px 10px 10px 0px rgba(147, 94, 27, 0.25); /*#935e1b ista boja, ali rgba zbog opacity*/
   height: auto;
- 
-
+  transition: box-shadow 0.3s;
+  background-color: rgba(251, 239, 225, 0.05); /*#fbefe1*/
+  padding-bottom: 12px;
+}
+.klasa2:hover{
+  box-shadow: 0px 10px 25px 0px rgba(147, 94, 27, 0.35);
 }
 .klasa2 h3{
   font-weight: bold;
+}
+@media only screen and (max-width:767px){
+  .klasa2{
+    border-width: 1px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media only screen and (min-width: 1600px){
+  .klasa2{
+    border-width: 3px;
+  }
+}
+/*****************************************/
+
+/*O NAMA-->*/
+.onama{
+  margin-top: 20vh;
+  padding-bottom: 10vh;
+  background-color: #fbefe1;
+  height: 100vh;
+}
+.onama .on_text{
+  padding-top: 15vh;
+  max-width: 50vw;
+}
+.onama h1{
+  font-weight: bold;
+  padding-left: 40px;
+  margin-bottom: 5vh;
+  transition: transform 0.5s;
+}
+.onama h1:hover{
+  transform: rotateX(-180deg);
+}
+.on_text p{
+  padding-top: 5vh;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.on_text img{
+  margin: 0 auto;
+  max-width: 15vw;
+  margin-top: 5vh;
+  display: none;
+  filter: sepia(0);
+  transition: filter 0.3s;
+}
+.on_text img:hover{
+  filter: sepia(100%);
+}
+.onama .on_img{
+  padding-left: 0;
+}
+.onama .on_img img{
+  height: 100vh;
+  max-width: 50vw;
+}
+.onama .arrow_up{
+  top: -100px;
+}
+.onama .arrow_down{
+  top: -100px;
+}
+@media only screen and (max-width:767px){
+  .onama{
+    margin-top: 12vh;
+  }
+  .onama .on_text{
+    max-width: 100vw;
+  }
+  .onama .on_img img{
+    display: none;
+  }
+  .on_text img{
+    display: flex;
+  }
+}
+@media only screen and (max-width:500px){
+  .on_text img{
+    display: none;
+  }
+}
+@media only screen and (max-width:400px){
+  .on_text #par2{
+    display: none;
+  }
+  .on_text{
+    padding-top: 0;
+  }
+}
+/*****************************************/
+
+/*GALLERY-->*/
+.galle{
+  padding-bottom: 70px;
+  padding-top: 35px;
+}
+.galle h1{
+  text-align: center;
+  font-weight: bold;
+  padding-bottom: 35px;
+}
+.galle img{
+  max-width:90%;
+  display: flex;
+  margin: 0 auto;
+  border-radius: 12px;
+  box-shadow: 5px 5px 20px 1px rgba(0,0,0,0.25);  /*hex: #e7a61a*/
+  border: 4px solid rgba(147, 94, 27, 0.05); /*hex: #935e1b*/
+  transition: border-color 0.5s;
+}
+.galle img:hover{
+  border: 4px solid rgba(147, 94, 27, 0.5);
+}
+.galle img:active{
+  border: 4px solid rgba(147, 94, 27, 0.95);
+}
+.galle .arrow_up img, .galle .arrow_down img{
+  box-shadow: none;
+  border-radius: 0;
+  border: none;
+}
+.galle .row{
+  margin-top: 50px;
+}
+@media only screen and (max-width:767px){
+  .galle .col-sm-3{
+    margin-bottom: 50px;
+  }
+  .galle .row{
+    margin-top: 0;
+  }
+}
+/*sledece dve su klase iz lightbox.css:*/
+.lightbox .lb-image{
+  border-radius: 12px;
+}
+.lb-outerContainer{
+  border-radius: 12px;
 }
 
 /*****************************************/
