--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ header{
  display:grid;
  grid-template-columns: auto auto auto;
  margin: 20px;
+ margin-top: 30px;
 }
 .klasa2{
   border-radius: 15px;
